[gd_scene load_steps=32 format=2]

[ext_resource path="res://Assets/Plants/Animations/Hive-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Plants/Hive.gd" type="Script" id=2]
[ext_resource path="res://Scenes/PlantScenes/BuffNodesComponent.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Plants/Animations_Plant/SummonAnim-Sheet.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 352, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 416, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 448, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "spawn",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 16, 16 )

[sub_resource type="CapsuleShape2D" id=12]
radius = 17.0588
height = 78.8235

[node name="Hive" type="Area2D" groups=["Plants"]]
script = ExtResource( 2 )

[node name="AnimatedSpriteComp" type="AnimatedSprite" parent="."]
frames = SubResource( 10 )
animation = "spawn"
frame = 8
playing = true

[node name="HurtBoxComp" type="CollisionShape2D" parent="."]
shape = SubResource( 11 )

[node name="Swarm" type="Node2D" parent="."]

[node name="DetectionComp" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionComp"]
position = Vector2( 12.3529, -0.588235 )
rotation = 1.5708
shape = SubResource( 12 )

[node name="DroneRespawnTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="BuffNodesComponent" parent="." instance=ExtResource( 3 )]
position = Vector2( -0.588235, 0 )
giveBuffTo = [ "Maw", "None", "None", "None", "None", "None", "None", "None" ]

[node name="TileArea1" parent="BuffNodesComponent" index="0"]
visible = false

[node name="BloodTile1" parent="BuffNodesComponent" index="1"]
visible = false
frame = 23

[node name="TileArea2" parent="BuffNodesComponent" index="2"]
visible = false

[node name="BloodTile2" parent="BuffNodesComponent" index="3"]
visible = false
frame = 20

[node name="TileArea3" parent="BuffNodesComponent" index="4"]
visible = false

[node name="BloodTile3" parent="BuffNodesComponent" index="5"]
visible = false
frame = 20

[node name="BloodTile4" parent="BuffNodesComponent" index="7"]
frame = 20

[node name="BloodTile5" parent="BuffNodesComponent" index="9"]
frame = 20

[node name="BloodTile6" parent="BuffNodesComponent" index="11"]
frame = 20

[node name="BloodTile7" parent="BuffNodesComponent" index="13"]
frame = 20

[node name="BloodTile8" parent="BuffNodesComponent" index="15"]
frame = 20

[node name="TileArea9" parent="BuffNodesComponent" index="16"]
visible = false

[node name="BloodTile9" parent="BuffNodesComponent" index="17"]
visible = false
frame = 23

[connection signal="animation_finished" from="AnimatedSpriteComp" to="." method="_on_AnimatedSpriteComp_animation_finished"]
[connection signal="area_entered" from="DetectionComp" to="." method="_on_enemy_entered"]
[connection signal="area_exited" from="DetectionComp" to="." method="_on_enemy_exited"]
[connection signal="timeout" from="DroneRespawnTimer" to="." method="_on_DroneRespawnTimer_timeout"]

[editable path="BuffNodesComponent"]
